Integration of current Thing (#10)
* Added docker and data init

* open api changes

* Api gen v1

* Api gen v1

* test Interceptor

* basic structure

* Interfaces

* Soap Integration v1

* all soap methods

* wip 1

* User Repo

* RentalRepo v1

* implement car Service + api impl + tests

* rebase from genGorm-

* User services (#7)

* Initial setup rental service and soap call (#5)

* Added docker and data init

* open api changes

* Api gen v1

* Api gen v1

* test Interceptor

* basic structure

* Interfaces

* Soap Integration v1

* all soap methods

* add user service + test

* add user service + tests + api impl

---------


* add booking service + api impl + tests (#8)

* added UserRepo (done) CarRepo (90% done - need Maxl help)

* first version of queryForTimerange

* Switch mapping to api impl (#9)

* switch mapping to api impl

* switch mapping to api impl

* Brought everything together

* Added missing Methods

* add Map function in api-impl

* add Map function in api-impl

* Small chabges

* Fixed Password Bug

* added state change

* Jwt is here

* now using currency convertor when getting Cars

---------
