# Rental-Server/internal/data/sql/dao/model/rental_user.gen.go
@@ -1,0 +1,25 @@
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+// Code generated by gorm.io/gen. DO NOT EDIT.
+
+package model
+
+import (
+	"time"
+)
+
+const TableNameRentalUser = "rental_user"
+
+// RentalUser mapped from table <rental_user>
+type RentalUser struct {
+	ID        string    `gorm:"column:id;primaryKey;default:gen_random_uuid()" json:"id"`
+	Name      string    `gorm:"column:name;not null" json:"name"`
+	Email     string    `gorm:"column:email;not null" json:"email"`
+	Password  string    `gorm:"column:password;not null" json:"password"`
+	CreatedAt time.Time `gorm:"column:created_at;default:now()" json:"created_at"`
+}
+
+// TableName RentalUser's table name
+func (*RentalUser) TableName() string {
+	return TableNameRentalUser
+}
